Fixes alignment of categories lists

--- a/src/_includes/less/styles/_list.less
+++ b/src/_includes/less/styles/_list.less
@@ -18,14 +18,19 @@
   border-bottom: 1px solid @brand--grey;
 }
 
-  .category-item:first-child {
+  .category__single {
     padding-top: 1.5em;
+  }
+
+  .categories__columns {
+    padding-top: 1em;
   }
 
   .category-item .category-item__title {
     padding-top: 0.25em;
     padding-left: 0.5em
   }
+
 
 @media screen and (min-width: 481px) {
 
